fix menu invisible input style applied everywhere

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@
     padding: 1rem;
 }
 
-input {
+menuToggle input {
     width: 1.1em;
     height: 1.1em;
 }
